# picoputt

./: CMakeLists.txt  README.md  README_release_build.txt.in
images/: colormap.py
images/fonts/: ATTRIBUTION.txt  charset.txt  regular.csv
shaders/: cmul.frag  gaussian.frag  identity.vert  pdf.frag  plane_wave.frag  putt.frag  qturn.frag  rgsum_reduce.frag  rsum_reduce.frag  surface.vert
shaders/drag/: build_lip.comp  init_lip.comp  integrate_lip_x.comp  integrate_lip_y.comp  lip_kiss.comp
shaders/graphics/: club.frag  debug.frag  fill_color.frag  renderer.frag
shaders/system/: potential.frag  wall.frag
shaders/text/: glyph.vert  msdf.frag
src/: config.h  framebuffers.c  framebuffers.h  game.c  game.h  loop.c  loop.h  main.c  resources.c  resources.h  shaders.c  shaders.h  text.c  text.h  utils.c  utils.h
